syntax = "proto3";

package greeter;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloStream(HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
    string firstname = 1;
    string lastname = 2;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
